--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,5 +14,5 @@ jobs:
     runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v1
-      - name: xcodebuild test
-        run: set -o pipefail && xcodebuild test -scheme WindowTreatment -destination "platform=macOS" | xcpretty
+      - name: swift test
+        run: swift test
